css/plan.css
/* Fonts */
@font-face {
    font-family: "neutra-bold";
    src:url("../fonts/neutra/Neutraface2Text-Bold.eot");
    src:url('../fonts/neutra/Neutraface2Text-Bold.eot?#iefix') format('embedded-opentype'),
        url('../fonts/neutra/Neutraface2Text-Bold.woff') format('woff'),
        url('../fonts/neutra/Neutraface2Text-Bold.ttf') format('truetype'),
        url("../fonts/neutra/Neutraface2Text-Bold.svg#neutra-bold") format("svg");
}

@font-face {
    font-family: "hera-bold";
    src:url("../fonts/hera/HeraBig-SemiBold.eot");
    src:url('../fonts/hera/HeraBig-SemiBold.eot?#iefix') format('embedded-opentype'),
        url('../fonts/hera/HeraBig-SemiBold.woff') format('woff'),
        url('../fonts/hera/HeraBig-SemiBold.ttf') format('truetype'),
        url("../fonts/hera/HeraBig-SemiBold.svg#hera-bg") format("svg");
}

/* Reset */
* { box-sizing:border-box; }
html, body, header, main, section, article, footer { margin:0; padding:0; width:100%; }
body { z-index:1; position:relative; -webkit-transform: translate3d(0,0,0); }
h1, h2, h3, h4, h5, h6 { margin-top:0px; margin-bottom:0px; }
a { text-decoration:none; }
nav ul { list-style-type:none; margin:0; padding:0; }
nav ul li { display:inline-block; }
iframe { border:none; }
hr { border:none; height:1px; margin:0 auto; padding:0; }
.mobileHide { display:none; }
.mobileOnly { display:block; }
.mobileOnly.imageOnly { display:none; }
.nobreak { white-space:nowrap; }
footer p { margin:0; padding:0; }
.jumpToPoint { visibility:hidden; position:absolute; top:-25px; left:0px; }
.disabled iframe { pointer-events:none; }
.hidden { display:none !important; }
.invisible { opacity:0; z-index:-2; }


/* Typography */
.typ-title { font-weight:normal; font-family:"hera-bold"; font-size:30px; line-height:40px; letter-spacing:1px; text-transform:uppercase; -webkit-text-stroke-width:1px; text-stroke-width:1px; }
.typ-littleTitle { font-weight:normal; text-transform:uppercase; font-family:"neutra-bold"; letter-spacing:1px; font-size:13px; }
.typ-littleTitle { letter-spacing:1.3px; }
.typ-categoryTitle { font-size:15px; font-weight:normal; text-transform:uppercase; font-family:"neutra-bold"; letter-spacing:1px; }
.typ-categoryTitle { letter-spacing:1.3px; }
.typ-body { font-weight:normal;text-transform:none;  font-family:"garamond-premier-pro-caption"; font-size:20px; line-height:25px; margin-bottom:10px; }
.typ-subsection-header { font-weight:normal; font-family:"garamond-premier-pro-caption"; font-size:24px; line-height:30px; }
.typ-body, .typ-subsection-header { -moz-font-feature-settings:'onum' 1; -ms-font-feature-settings:'onum' 1; -o-font-feature-settings:'onum' 1; -webkit-font-feature-settings:'onum' 1; font-feature-settings:'onum' 1; }

/* Colors */
a, a:link, a:hover, a:link, a:active, a span, a:link span, a:hover span, a:link span, a:active span { color:#F26342; }
nav a, nav a:link, nav a:hover, nav a:link, nav a:active, p, span, h1, h2, h3, h4, h5, h6, hr { color:#1B468D; }
nav.mobile { border:1px solid #1B468D; }
nav.mobile .view { display:none; }
nav.mobile label:first-of-type { border-right:1px solid #1B468D; }
nav.mobile .view:checked + label { background:#1B468D; color:white; }
nav.mobile .view:not(:checked) + label { color:#1B468D; background:white; }
section.map:after { background:black; }
footer { background:#F1F1F1; -webkit-box-shadow: 0px 2px 30px rgba(0,0,0,.5); -moz-box-shadow: 0px 2px 30px rgba(0,0,0,.5); box-shadow: 0px 2px 30px rgba(0,0,0,.5); }
hr { background-color:#1B468D; }
hr.subsection-divider, section.list > hr, section.list > section hr.mobileOnly { background-color:#CBCBCB; }
nav.secondary.fixed { -webkit-transform: translate3d(0,0,0); background:white; -webkit-box-shadow: 0px 2px 15px rgba(0,0,0,.5); -moz-box-shadow: 0px 2px 15px rgba(0,0,0,.5); box-shadow: 0px 2px 15px rgba(0,0,0,.5); }

/* Position */
header nav.primary ul li { vertical-align:middle; }
header nav.primary ul li.plan { position:absolute; right:6.67vw; top:36px; }
header nav.primary ul li.plan a { padding-bottom:6px; }

nav.mobile { margin:0 auto; }
nav.mobile label { display:inline-block; text-align:center; line-height:30px; }

section { position:relative; text-align:center; }
section.map { position:relative; }
section.map:after { position:absolute; left:0; top:46px; z-index:-1; }
section.map.disabled:after { z-index:1; }
section.map iframe { z-index:0; position:relative; }
nav.secondary.fixed { z-index:2; position:fixed; left:0; top:-1000px; }
nav.secondary ul { text-align:center; }
nav.secondary li { display:block; }

main { position:relative;  }
section article { display:block; text-align:left; vertical-align:top; }
section article header { text-align:center; }
section article header img { vertical-align:top; }
section article h4 { text-indent:35px; text-align:left; position:relative; }
.hotel:not(.venue) h4, #thingstodo h4, #explore h4, #wheretoeat h4 { text-indent:30px;  }
.hotel h4, .hotel p { text-align:center; }
section article h4 span { position:relative; }
.mapTitleStarter:before { display:inline-block; position:absolute; left:-70px; top:-2px; }
.hotel:not(.venue) .mapTitleStarter:before, #thingstodo .mapTitleStarter:before, #explore .mapTitleStarter:before, #wheretoeat .mapTitleStarter:before { left:-60px; }

footer { position:fixed; left:0; bottom:-170px; text-align:center; z-index:10; }
footer .content { position:relative; left:0px; }
footer .content span:not(:last-of-type):after { position:relative; left:5px; top:0; }

/* Size */
body { padding-bottom:240px; }
h2 { margin-bottom:20px; }
hr { width:170px; }
body > header { padding-top:20px; padding-bottom:20px; }
body > header, nav.secondary.fixed, main > section:not(.map), body > footer .content { width:100%; padding-left:6.67%; padding-right:6.67%; }
body > footer { height:182px; }
body > footer p.typ-body { margin-bottom:0px; }
body > header nav.primary, main > section:not(.map) { margin-top:0px; margin-bottom:0px; }
body > header nav.primary ul li img { height:50px; }
/* ... */

